[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
anyhow = "1.0.82"
#cypto-layer = "0.1.0"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
rand_core = "0.6.4"
sodiumoxide = "0.2.7"
ring = "0.17.8"
aead = "0.5.2"
hkdf = "0.13.0-pre.3"
arrayref = "0.3.6"
sha2 = "0.11.0-pre.3"
ed25519-dalek = "2.1.1"
rand = "0.8.0"
rand07 = { package = "rand", version = "0.7.0" }
[dependencies.x25519-dalek]
version = "2.0.1"
features = ["static_secrets"]
